--- a/app/src/main/res/layout/activity_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_doi_mat_khau.xml
@@ -8,48 +8,67 @@
     android:orientation="vertical"
     tools:context=".DoiMatKhau">
 
-    <Button
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rectangle"
-        android:text="Đổi mật khẩu"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbardk"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/rectangle"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:title="Đổi mật khẩu"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="10dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boder"
+            android:drawableStart="@drawable/ic_baseline_account_circle_24"
+            android:hint="    Mật khẩu cũ"
+            android:padding="16dp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:cardCornerRadius="10dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boder"
+            android:drawableStart="@drawable/ic_baseline_account_circle_24"
+            android:hint="    Mật khẩu mới"
+            android:padding="16dp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="10dp">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="32dp"
-        android:hint="    Mật khẩu cũ"
         android:background="@drawable/boder"
         android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="32dp"
-        android:hint="    Mật khẩu mới"
-        android:background="@drawable/boder"
-        android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="32dp"
         android:hint="    Xác nhận mật khẩu mới"
-        android:background="@drawable/boder"
-        android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
-
+        android:padding="16dp" />
+    </androidx.cardview.widget.CardView>
     <Button
         android:layout_width="140dp"
         android:layout_height="wrap_content"
@@ -57,6 +76,7 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button1"
         android:text="Xác nhận" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
