--- a/app/src/main/res/layout/layout_header_navi.xml
+++ b/app/src/main/res/layout/layout_header_navi.xml
@@ -20,7 +20,7 @@
         android:text="Tincoder"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/a4"/>
     <TextView
         android:id="@+id/tvEmail2"
         android:layout_width="wrap_content"
@@ -29,5 +29,5 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_marginTop="8dp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/a4"/>
 </LinearLayout>
