--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="mau2">#66E4E4</color>
     <color name="mau3">#F3F1E0</color>
     <color name="red">#F44336</color>
+    <color name="a2">#F8E1E1</color>
+    <color name="a3">#76A3FA</color>
+    <color name="a4">#083BBC</color>
+    <color name="a5">#BDD2FD</color>
 </resources>
