--- a/app/src/main/res/drawable/custom_button1.xml
+++ b/app/src/main/res/drawable/custom_button1.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="50dp"/>
-    <gradient android:startColor="#C6B0ED"/>
-    <gradient android:endColor="#7FE1E1"/>ndroid:endColor="#66E4E4"/>
+    <gradient android:startColor="#A7ECF3"/>
+    <gradient android:endColor="#EEF3F3"/>ndroid:endColor="#66E4E4"/>
 <stroke
-    android:color="@color/mau1"
+    android:color="#9FB2E1"
     android:width="1dp"
     />
 
