--- a/app/src/main/res/layout/activity_lam_bai_thi.xml
+++ b/app/src/main/res/layout/activity_lam_bai_thi.xml
@@ -34,7 +34,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:text="00:00"
-                android:textColor="@color/black"
+                android:textColor="@color/a4"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -73,7 +73,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Kiểm tra"
-                android:textColor="@color/black"
+                android:textColor="@color/a4"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -96,7 +96,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/a4"
             android:text="Lùi"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -113,7 +113,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Kết thúc"
-                android:textColor="@color/black"
+                android:textColor="@color/a4"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -129,7 +129,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:textColor="@color/a4"
                 android:text="Tiến"
                 android:textSize="20sp"
                 android:textStyle="bold" />
