--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,91 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/hn"
     android:orientation="vertical"
-    android:background="@color/mau3"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-            android:layout_marginLeft="-100dp"
-            android:layout_marginTop="-150dp"
-            android:src="@drawable/circle" />
-
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_marginLeft="-100dp"
-            android:layout_marginTop="-90dp"
-            android:src="@drawable/circle" />
-
-    </LinearLayout>
-
-     <TextView
-       android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="-210dp"
-        android:text="THI BẰNG"
-        android:textSize="50dp"
-        android:textStyle="bold" />
     <TextView
-        android:layout_width="220dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="190dp"
-        android:layout_marginTop="-140dp"
-        android:text="LÁI XE"
-        android:textSize="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="30dp"
+        android:text="THI BẰNG LÁI XE"
+        android:textColor="@color/a4"
+        android:textSize="45dp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/tendn"
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginBottom="-60dp"
+        android:background="@drawable/logo2">
+    </ImageView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="32dp"
-        android:hint="    Email"
-        android:text="yenvu@gmail.com"
-        android:background="@drawable/boder"
-        android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
+        android:layout_margin="30dp"
+        app:cardCornerRadius="10dp">
+
+        <EditText
+            android:id="@+id/tendn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boder"
+            android:textColor="@color/a4"
+            android:drawableStart="@drawable/ic_baseline_account_circle_24"
+            android:hint="    Email"
+            android:padding="14dp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:cardCornerRadius="10dp">
     <EditText
         android:id="@+id/password"
-        android:text="123"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="32dp"
+        android:background="@drawable/boder"
+        android:textColor="@color/a4"
+        android:drawableStart="@drawable/ic_baseline_lock_24"
         android:hint="    Password"
         android:inputType="textPassword"
-        android:background="@drawable/boder"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
-        android:padding="16dp"/>
+        android:padding="14dp"/>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvForgotpass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="15dp"
         android:text="FORGOT PASSWORD?"
-        android:textStyle="bold"
+        android:textColor="@color/white"
         android:textSize="18dp"
-        android:textColor="@color/black"
-        android:layout_marginStart="200dp"
-    />
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
         android:orientation="horizontal">
 
@@ -98,8 +87,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/custom_button1"
             android:text="LOGIN"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textColor="@color/a4"
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="71dp"
@@ -114,53 +103,29 @@
             android:src="@drawable/logogg" />
     </LinearLayout>
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="40dp"
-    android:layout_gravity="center"
-    android:orientation="horizontal">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New User?"
-        android:textSize="18dp"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/tvDangKy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:textColor="@color/mau1"
-        android:text="Register Now"
-        />
-</LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         android:orientation="horizontal">
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="-10dp"
-            android:src="@drawable/circle"/>
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="350dp"
-            android:src="@drawable/circle"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New User?"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvDangKy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Register Now"
+            android:textColor="@color/a4"
+            android:textSize="18dp"
+            android:textStyle="bold" />
     </LinearLayout>
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="150dp"
-        android:src="@drawable/circle"/>
-
-
-
-
 </LinearLayout>
