--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@drawable/rectangle"
+                app:titleTextColor="@color/a4"
                 android:theme="@style/ThemeOverlay.AppCompat.Light"
                 app:title="Thi bằng lái xe"
                 />
