--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -1,111 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fg1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/fg1"
-    android:background="@color/mau3">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:text="Home"/>
+    android:background="@drawable/hn"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/mau3"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imvLambaithi"
-                android:layout_width="150dp"
-                android:layout_height="145dp"
-                android:src="@drawable/hinh2" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
 
-            <ImageView
-                android:id="@+id/imvKetqua"
-                android:layout_width="150dp"
-                android:layout_height="145dp"
-                android:layout_marginStart="25dp"
-                android:src="@drawable/hinh3" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/imvLambaithi"
+                    android:layout_width="150dp"
+                    android:layout_height="145dp"
+                    android:src="@drawable/hinh2" />
+            </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:orientation="horizontal">
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
 
-            <ImageView
-                android:id="@+id/imvHoclithuyet"
-                android:layout_width="150dp"
-                android:layout_height="145dp"
-                android:src="@drawable/hinh1" />
+                <ImageView
+                    android:id="@+id/imvKetqua"
+                    android:layout_width="150dp"
+                    android:layout_height="145dp"
+                    android:src="@drawable/hinh3" />
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="145dp"
-                android:layout_marginStart="25dp"
-                android:src="@drawable/hinh4" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="145dp"
-                android:src="@drawable/hinh5" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="145dp"
-                android:layout_marginStart="25dp"
-                android:src="@drawable/hinh6" />
+                <ImageView
+                    android:id="@+id/imvHoclithuyet"
+                    android:layout_width="150dp"
+                    android:layout_height="145dp"
+                    android:src="@drawable/hinh1" />
+            </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
+
+                <ImageView
+                    android:id="@+id/imvCausai"
+                    android:layout_width="150dp"
+                    android:layout_height="145dp"
+                    android:src="@drawable/hinh4" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="-10dp"
-                android:src="@drawable/circle" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="350dp"
-                android:layout_marginTop="5dp"
-                android:src="@drawable/circle" />
+                <ImageView
+                    android:id="@+id/imvluat"
+                    android:layout_width="150dp"
+                    android:layout_height="145dp"
+                    android:src="@drawable/hinh5" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
+
+                <ImageView
+                    android:id="@+id/imvMeo"
+                    android:layout_width="150dp"
+                    android:layout_height="145dp"
+                    android:src="@drawable/hinh6" />
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="150dp"
-            android:src="@drawable/circle" />
 
     </LinearLayout>
 </LinearLayout>
