--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -1,55 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/mau3">
+    android:background="@drawable/hn"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:textSize="25dp"
-        android:textColor="@color/black"
         android:layout_gravity="center"
-        android:textStyle="bold"
-        android:text="Thông tin cá nhân"/>
+        android:layout_marginTop="100dp"
+        android:text="Thông tin cá nhân"
+        android:textColor="@color/a4"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/fg_edtEmail"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="32dp"
-        android:hint="    Email"
-        android:background="@drawable/boder"
-        android:enabled="false"
-        android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
+        android:layout_margin="30dp"
+        app:cardCornerRadius="10dp">
 
-    <EditText
-        android:id="@+id/fg_edtHoten"
+        <EditText
+            android:id="@+id/fg_edtEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boder"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:enabled="false"
+            android:hint="    Email"
+            android:padding="16dp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="32dp"
-        android:hint="    Họ tên"
-        android:background="@drawable/boder"
-        android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
-    <EditText
-        android:id="@+id/fg_edtSDT"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:cardCornerRadius="10dp">
+
+        <EditText
+            android:id="@+id/fg_edtHoten"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boder"
+            android:drawableStart="@drawable/ic_baseline_account_circle_24"
+            android:hint="    Họ tên"
+            android:padding="16dp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="32dp"
-        android:hint="    Số điện thoại"
-        android:background="@drawable/boder"
-        android:drawableStart="@drawable/ic_baseline_account_circle_24"
-        android:padding="16dp"/>
+        android:layout_margin="30dp"
+        app:cardCornerRadius="10dp">
+
+        <EditText
+            android:id="@+id/fg_edtSDT"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boder"
+            android:drawableStart="@drawable/ic_baseline_phone_24"
+            android:hint="    Số điện thoại"
+            android:padding="16dp" />
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/fg_btnLuutt"
@@ -59,29 +74,5 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button1"
         android:text="Lưu" />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="-10dp"
-            android:src="@drawable/circle" />
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="350dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/circle" />
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="150dp"
-        android:src="@drawable/circle" />
 </LinearLayout>
