--- a/app/src/main/res/layout/fragment_ketqua.xml
+++ b/app/src/main/res/layout/fragment_ketqua.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/mau3"
+    android:background="@drawable/hn"
     tools:context=".fragment.Fragment_Loailithuyet">
 
     <GridView
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="600dp"
         android:numColumns="2"
         android:id="@+id/gvKetqua"
         android:padding="10dp"/>
