--- a/app/src/main/res/layout/fragment_lambaithi.xml
+++ b/app/src/main/res/layout/fragment_lambaithi.xml
@@ -1,79 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/hn"
     android:orientation="vertical"
-    android:background="@color/mau3"
     tools:context=".fragment.Fragment_Lambaithi">
 
     <TextView
         android:id="@+id/tvSTTcau_lbt"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Câu 1"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tvCauhoilt_lbt"
-        android:layout_width="match_parent"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_height="100dp"
         android:layout_marginTop="10dp"
-        android:padding="5dp"
-        android:background="@drawable/border_rectangle"
-        android:text="Câu hỏi"
+        android:gravity="center"
+        android:text="Câu 1"
         android:textColor="@color/black"
-        android:textSize="19dp"
+        android:textSize="20dp"
         android:textStyle="bold" />
 
-    <RadioGroup
-        android:id="@+id/radG_lbt"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:padding="5dp"
-        android:layout_height="380dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/border_rectangle">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp">
 
-        <RadioButton
-            android:id="@+id/rad1_lbt"
-            android:layout_marginTop="10dp"
+        <TextView
+            android:id="@+id/tvCauhoilt_lbt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lựa chọn 1"
-            android:textSize="18dp" />
+            android:layout_height="100dp"
+            android:padding="5dp"
+            android:text="Câu hỏi"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
 
-        <RadioButton
-            android:id="@+id/rad2_lbt"
-            android:layout_marginTop="50dp"
+    <ImageView
+        android:id="@+id/imvHinhanh_lbt"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp">
+
+        <RadioGroup
+            android:id="@+id/radG_lbt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lựa chọn 2"
-            android:textSize="18dp" />
+            android:layout_height="280dp"
+            android:padding="5dp">
 
-        <RadioButton
-            android:id="@+id/rad3_lbt"
-            android:layout_marginTop="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lựa chọn 3"
-            android:textSize="18dp" />
+            <RadioButton
+                android:id="@+id/rad1_lbt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Lựa chọn 1"
+                android:textSize="15dp" />
 
-        <RadioButton
-            android:id="@+id/rad4_lbt"
-            android:layout_marginTop="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lựa chọn 4"
-            android:textSize="18dp" />
+            <RadioButton
+                android:id="@+id/rad2_lbt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Lựa chọn 2"
+                android:textSize="15dp" />
 
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/rad3_lbt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Lựa chọn 3"
+                android:textSize="15dp" />
+
+            <RadioButton
+                android:id="@+id/rad4_lbt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Lựa chọn 4"
+                android:textSize="15dp" />
+
+        </RadioGroup>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
