--- a/app/src/main/res/layout/item_ketqua.xml
+++ b/app/src/main/res/layout/item_ketqua.xml
@@ -2,20 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp">
     <ImageView
         android:id="@+id/imvExam"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_baseline_access_alarms_24"/>
-    <TextView
-        android:id="@+id/tvExam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Đề số "
-        android:textStyle="bold"
-        android:textSize="30dp"
-        android:layout_weight="1"
-        />
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/ketqua"/>
 
+        <TextView
+            android:id="@+id/tvExam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+            android:text="Đề số "
+            android:textSize="17dp"
+            android:textColor="@color/black"
+            android:padding="25dp"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
