--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -3,26 +3,26 @@
 <group android:checkableBehavior="single">
     <item android:id="@+id/nax_1"
         android:title="Home"
-        android:icon="@drawable/ic_baseline_account_circle_24"/>
+        android:icon="@drawable/ic_baseline_home_24"/>
     <item android:id="@+id/nax_2"
         android:title="@string/nav_2"
-        android:icon="@drawable/ic_baseline_account_circle_24"/>
+        android:icon="@drawable/ic_baseline_email_24"/>
     <item android:id="@+id/nax_3"
         android:title="@string/nav_3"
-        android:icon="@drawable/ic_baseline_account_circle_24"/>
+        android:icon="@drawable/ic_baseline_settings_24"/>
 
 </group>
-    <item android:title="Account">
+    <item android:title="Tài khoản">
         <menu>
             <item android:id="@+id/nax_4"
                 android:title="Thông tin cá nhân"
                 android:icon="@drawable/ic_baseline_account_circle_24"/>
             <item android:id="@+id/nax_5"
                 android:title="@string/nav_5"
-                android:icon="@drawable/ic_baseline_account_circle_24"/>
+                android:icon="@drawable/ic_baseline_lock_24"/>
             <item android:id="@+id/nax_6"
                 android:title="@string/nav_6"
-                android:icon="@drawable/ic_baseline_account_circle_24"/>
+                android:icon="@drawable/ic_baseline_logout_24"/>
 
         </menu>
 
