--- a/app/src/main/res/layout/dialog_meothi.xml
+++ b/app/src/main/res/layout/dialog_meothi.xml
@@ -18,7 +18,7 @@
 
             android:text="Mẹo thi"
             android:textColor="@color/white"
-            android:background="@color/mau1"
+            android:background="@color/a3"
             android:textSize="17dp" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
